# gba_rustmulator

./: .gitignore  Cargo.toml  README.md  bitbucket-pipelines.yml  flake.nix  rustfmt.toml
.cargo/: config.toml
benches/: bios.rs  bit_libraries.rs  bit_registers.rs
data/demos/: tonc-bin.txt
src/: cpu.rs  lib.rs  main.rs  memory.rs
src/arm7tdmi/: arm.rs  cpu.rs  mod.rs  psr.rs  thumb.rs
src/debugging/: disassembling.rs  mod.rs
src/gpu/: mod.rs
src/ppu/: mod.rs
src/system/: io.rs  mapped_registers.rs  mod.rs
src/windowing/: mod.rs
