[package]
    name = "gba_rustmulator"
    version = "0.1.0"
    authors = ["Patrick Agostaro <patrick.agostaro@gmail.com>"]
    edition = "2018"

    publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    bitvec = "0.20"
    imgui = "0.7"
    imgui-glium-renderer = "0.7"
    imgui-winit-support = "0.7"
    winit = "0.24"
    glium = "0.29"
    num-traits = "0.2"
    num-derive = "0.2"
    spin_sleep = "1.0"
    clipboard = "0.5"

[profile.dev]
	opt-level = 0
	
[profile.release]
	lto = true
    codegen-units = 1
	opt-level = 3

[profile.dev.package."*"]
	opt-level = 1