[package]
    name = "gba_rustmulator"
    version = "0.1.0"
    authors = ["Patrick Agostaro <patrick.agostaro@gmail.com>"]
    edition = "2018"

    publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    bitfield = "0.13"
    imgui = "0.7"
    imgui-glium-renderer = "0.7"
    imgui-winit-support = "0.7"
    glium = "0.29"
    num-traits = "0.2"
    num-derive = "0.3"
    spin_sleep = "1.0"
    clipboard = "0.5"
    bitvec = "0.21"

[dev-dependencies]
    criterion = "0.3"
    bitvec = "0.21"
    modular-bitfield = "0.11"
    bit_field = "0.10"

[[bench]]
    name = "bit_libraries"
    harness = false

[[bench]]
    name = "bios"
    harness = false

[profile.dev]
	opt-level = 1